# repositron

./: CONTRIBUTING.md  LICENSE  README.md  prek.toml  pyproject.toml  zensical.toml
.github/workflows/: release.yml  test.yml
docs/: concepts.md  get-started.md  index.md  limitations.md  reference.md
docs/design-notes/: index.md  inspirations.md  typed-keys.md
docs/guides/: bulk.md  configuration.md  custom-queries.md  filtering.md  hooks.md  index.md  pagination.md  primary-keys.md  projection.md  return-types.md  updates.md
docs/recipes/: configuration.md  custom-methods.md  dtos.md  index.md  primary-keys.md  projection.md  updates.md
src/repositron/: __init__.py  base.py  hooks.py  sentinel.py  sql.py
tests/: conftest.py  test_bulk.py  test_filtering.py  test_hooks.py  test_hydration.py  test_projection.py  test_typing.py  test_wiring.py  test_write.py
