[project]
name = "repositron"
version = "0.1.0"
description = "SQLAlchemy Sugar Syntax :D"
readme = "README.md"
authors = [
    { name = "Adeildo", email = "contato@felipeadeildo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.51",
]

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.4.5",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]
