[project]
name = "repositron"
version = "0.0.1"
description = "A typed, generic repository base for SQLAlchemy 2.0. Full CRUD with no per-table boilerplate."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Felipe Adeildo", email = "contato@felipeadeildo.com" }
]
requires-python = ">=3.13"
keywords = ["sqlalchemy", "repository", "orm", "crud", "typed", "generic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "sqlalchemy>=2.0.51",
]

[project.urls]
Homepage = "https://github.com/felipeadeildo/repositron"
Repository = "https://github.com/felipeadeildo/repositron"
Issues = "https://github.com/felipeadeildo/repositron/issues"

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.4.5",
    "ruff>=0.15.18",
    "ty>=0.0.51",
    "zensical>=0.0.45",
]
