[project]
name = "repositron"
version = "0.0.1"
description = "A typed, generic repository base for SQLAlchemy 2.0. Full CRUD with no per-table boilerplate."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Felipe Adeildo", email = "contato@felipeadeildo.com" }
]
requires-python = ">=3.13"
keywords = ["sqlalchemy", "repository", "orm", "crud", "typed", "generic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "sqlalchemy>=2.0.51",
]

[project.urls]
Homepage = "https://github.com/felipeadeildo/repositron"
Repository = "https://github.com/felipeadeildo/repositron"
Issues = "https://github.com/felipeadeildo/repositron/issues"

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.4.5",
    "ruff>=0.15.18",
    "ty>=0.0.51",
    "zensical>=0.0.45",
]

[tool.ruff]
line-length = 100
target-version = "py313"

fix = true
show-fixes = true
output-format = "grouped"

lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "RUF", # ruff-specific rules
    "ARG", # flake8-unused-arguments
    "ANN", # flake8-annotations
    "D",   # pydocstyle
]

lint.ignore = [
    "D107",   # Missing docstring in __init__
    "D100",   # Missing docstring in public module
    "D203",   # 1 blank line required before class docstring (conflita com D211)
    "D212",   # Multi-line docstring summary should start at the first line
    "D205",   # 1 blank line required between summary line and description
    "D400",   # First line should end with a period
    "D401",   # First line should be in imperative mood
    "D102",   # Missing docstring in public method (dunders, trivial overrides)
    "D105",   # Missing docstring in magic method
    "D417",   # Missing argument descriptions (we document the why, not each arg)
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs
]

lint.isort.combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
